--- a/SourceCodes/VirusBusters/VirusBusters/admin.Master
+++ b/SourceCodes/VirusBusters/VirusBusters/admin.Master
@@ -7,8 +7,6 @@
     <!-- BEGIN HEAD -->
 
 <head runat="server">
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
     <meta charset="utf-8" />
     <title><asp:ContentPlaceHolder ID="title" runat="server"></asp:ContentPlaceHolder></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -937,13 +935,13 @@
     <script src="../public/assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
     <script src="../public/assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
     <!-- END CORE PLUGINS -->
-    <!-- BEGIN PAGE LEVEL PLUGINS (TABLE)-->
+    <!-- BEGIN PAGE LEVEL PLUGINS-->
     <asp:ContentPlaceHolder ID="PageLevelPluginsScript" runat="server"></asp:ContentPlaceHolder>
     <!-- END PAGE LEVEL PLUGINS -->
     <!-- BEGIN THEME GLOBAL SCRIPTS -->
     <script src="../public/assets/global/js/app.min.js" type="text/javascript"></script>
     <!-- END THEME GLOBAL SCRIPTS -->
-    <!-- BEGIN PAGE LEVEL SCRIPTS (TABLE)-->
+    <!-- BEGIN PAGE LEVEL SCRIPTS-->
     <asp:ContentPlaceHolder ID="PageLevelScripts" runat="server"></asp:ContentPlaceHolder>
     <!-- END PAGE LEVEL SCRIPTS -->
     <!-- BEGIN THEME LAYOUT SCRIPTS -->
@@ -951,5 +949,6 @@
     <script src="../public/assets/themes/js/demo.min.js" type="text/javascript"></script>
     <script src="../public/assets/themes/js/quick-sidebar.min.js" type="text/javascript"></script>
     <!-- END THEME LAYOUT SCRIPTS -->
+    <asp:ContentPlaceHolder ID="Others" runat="server"></asp:ContentPlaceHolder>
 </body>
 </html>
