--- a/SourceCodes/VirusBusters/VirusBusters/public.Master
+++ b/SourceCodes/VirusBusters/VirusBusters/public.Master
@@ -242,24 +242,42 @@
                         <!-- END SIDEBAR TOGGLER BUTTON -->
                     </li>
                     <li class="nav-item">
-                        <a href="javascript:;" class="nav-link nav-toggle">
+                        <a href="articles.aspx" class="nav-link nav-toggle">
                             <i class="icon-call-end"></i>
                             <span class="title">Articles</span>
-                            <span class="arrow"></span>
                         </a>
-                        <ul class="sub-menu">
-                            <li class="nav-item">
-                                <a href="articles.aspx" class="nav-link ">
-                                    <span class="title">Posts</span>
-                                </a>
-                            </li>
-                        </ul>
                     </li>
                     <li class="nav-item">
                         <a href="map.aspx" class="nav-link nav-toggle">
                             <i class="icon-globe"></i>
                             <span class="title">Map</span>
                         </a>
+                    </li>
+                    <li class="nav-item start active open">
+                        <a href="javascript:;" class="nav-link nav-toggle">
+                            <i class="icon-home"></i>
+                            <span class="title">Appointment</span>
+                            <span class="selected"></span>
+                            <span class="arrow"></span>
+                            <span class="arrow open"></span>
+                        </a>
+                        <ul class="sub-menu">
+                            <li class="nav-item start">
+                                <a href="appointment_new.aspx" class="nav-link ">
+                                    <span class="title"">New</span>
+                                </a>
+                            </li>
+                            <li class="nav-item start">
+                                <a href="appointment_manage.aspx" class="nav-link ">
+                                    <span class="title">Manage</span>
+                                </a>
+                            </li>
+                            <li class="nav-item start active open">
+                                <a href="appointment_history.aspx" class="nav-link ">
+                                    <span class="title">History</span>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="nav-item  ">
                         <a href="symptom_checker.aspx" class="nav-link nav-toggle">
@@ -275,12 +293,7 @@
         <div class="page-content-wrapper">
             <!-- BEGIN CONTENT BODY -->
             <div class="page-content">
-                <form id="form1" runat="server">
-                <div>
-                    <asp:ContentPlaceHolder ID="contentBody" runat="server">
-                    </asp:ContentPlaceHolder>
-                </div>
-                </form>
+                <asp:ContentPlaceHolder ID="contentBody" runat="server"></asp:ContentPlaceHolder>
             </div>
             <!-- END CONTENT BODY -->
         </div>
