Article module completed

--- a/SourceCodes/VirusBusters/VirusBusters/admin.Master
+++ b/SourceCodes/VirusBusters/VirusBusters/admin.Master
@@ -147,7 +147,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="javascript:;" class="nav-link ">
+                                <a href="Articles_Validate.aspx" class="nav-link ">
                                     <span class="title">Validate</span>
                                 </a>
                             </li>
