Resolved bug in symptom_checker & removed located menu

--- a/SourceCodes/VirusBusters/VirusBusters/public.Master
+++ b/SourceCodes/VirusBusters/VirusBusters/public.Master
@@ -128,26 +128,24 @@
                             <span class="title">Map</span>
                         </a>
                     </li>
-                    <li class="nav-item start active open">
+                    <li class="nav-item">
                         <a href="javascript:;" class="nav-link nav-toggle">
                             <i class="icon-home"></i>
                             <span class="title">Appointment</span>
-                            <span class="selected"></span>
                             <span class="arrow"></span>
-                            <span class="arrow open"></span>
                         </a>
                         <ul class="sub-menu">
-                            <li class="nav-item start">
+                            <li class="nav-item">
                                 <a href="appointment_new.aspx" class="nav-link ">
                                     <span class="title"">New</span>
                                 </a>
                             </li>
-                            <li class="nav-item start">
+                            <li class="nav-item">
                                 <a href="appointment_manage.aspx" class="nav-link ">
                                     <span class="title">Manage</span>
                                 </a>
                             </li>
-                            <li class="nav-item start active open">
+                            <li class="nav-item">
                                 <a href="appointment_history.aspx" class="nav-link ">
                                     <span class="title">History</span>
                                 </a>
