--- a/SourceCodes/VirusBusters/VirusBusters/public.Master
+++ b/SourceCodes/VirusBusters/VirusBusters/public.Master
@@ -128,11 +128,11 @@
                             <span class="title">Map</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="javascript:;" class="nav-link nav-toggle">
                             <i class="icon-home"></i>
                             <span class="title">Appointment</span>
-                            <span class="arrow"></span>
+                            <span class="arrow open"></span>
                         </a>
                         <ul class="sub-menu">
                             <li class="nav-item">
@@ -143,11 +143,6 @@
                             <li class="nav-item">
                                 <a href="appointment_manage.aspx" class="nav-link ">
                                     <span class="title">Manage</span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="appointment_history.aspx" class="nav-link ">
-                                    <span class="title">History</span>
                                 </a>
                             </li>
                         </ul>
