--- a/SourceCodes/VirusBusters/VirusBusters/admin.Master
+++ b/SourceCodes/VirusBusters/VirusBusters/admin.Master
@@ -65,12 +65,12 @@
                         <ul class="dropdown-menu dropdown-menu-default">
                             <li>
                                 <a href="appointment_manage.aspx">
-                                    <i class="icon-user"></i> My Appointment </a>
+                                    <i class="fa fa-user"></i> My Appointment </a>
                             </li>
                             <li class="divider"> </li>
                             <li>
                                 <a href="logout.aspx" runat="server" id="myLink">
-                                    <i class="icon-key"></i> Log Out </a>
+                                    <i class="fa fa-sign-out"></i> Log Out </a>
                             </li>
                         </ul>
                     </li>
@@ -110,7 +110,7 @@
                     </li>
                     <li class="nav-item active">
                         <a href="javascript:;" class="nav-link nav-toggle">
-                            <i class="icon-call-end"></i>
+                            <i class="fa fa-file-text"></i>
                             <span class="title">Articles</span>
                             <span class="arrow open"></span>
                         </a>
@@ -134,13 +134,13 @@
                     </li>
                     <li class="nav-item">
                         <a href="map.aspx" class="nav-link nav-toggle">
-                            <i class="icon-globe"></i>
+                            <i class="fa fa-globe"></i>
                             <span class="title">Map</span>
                         </a>
                     </li>
                     <li class="nav-item active">
                         <a href="javascript:;" class="nav-link nav-toggle">
-                            <i class="icon-home"></i>
+                            <i class="fa fa-book"></i>
                             <span class="title">Appointment</span>
                             <span class="arrow open"></span>
                         </a>
@@ -159,7 +159,7 @@
                     </li>
                     <li class="nav-item active">
                         <a href="javascript:;" class="nav-link nav-toggle">
-                            <i class="icon-call-end"></i>
+                            <i class="fa fa-medkit"></i>
                             <span class="title">Symptom Checker</span>
                             <span class="arrow open"></span>
                         </a>
