Changed the homepage link to articles.aspx
Changed the homepage link to articles.aspx for the icon

--- a/SourceCodes/VirusBusters/VirusBusters/admin.Master
+++ b/SourceCodes/VirusBusters/VirusBusters/admin.Master
@@ -42,7 +42,7 @@
         <div class="page-header-inner ">
             <!-- BEGIN LOGO -->
             <div class="page-logo">
-                <a href="index.html">
+                <a href="articles.aspx">
                     <img src="../public/assets/themes/img/logo.png" alt="logo" class="logo-default" /> </a>
                 <div class="menu-toggler sidebar-toggler">
                     <span></span>
